<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.jkrude</groupId>
  <artifactId>MoneyWatch</artifactId>
  <version>1.0-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>13</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-fxml</artifactId>
      <version>13</version>
    </dependency>

    <!--Junit-->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.11</version>
      <scope>test</scope>
    </dependency>

    <!-- External dependencies -->
    <dependency>
      <artifactId>charts</artifactId>
      <groupId>eu.hansolo.fx</groupId>
      <version>11.7</version>
    </dependency>
    <!--TODO: Remove if a db is used-->
    <dependency>
      <artifactId>json-simple</artifactId>
      <groupId>com.googlecode.json-simple</groupId>
      <version>1.1.1</version>
    </dependency>

    <dependency>
      <groupId>de.saxsys</groupId>
      <artifactId>mvvmfx</artifactId>
      <version>1.8.0</version>
    </dependency>

    <dependency>
      <groupId>org.testfx</groupId>
      <artifactId>testfx-junit</artifactId>
      <version>4.0.15-alpha</version>
      <scope>test</scope>
    </dependency>

    <!-- UI -->
    <dependency>
      <groupId>com.jfoenix</groupId>
      <artifactId>jfoenix</artifactId>
      <version>9.0.10</version>
    </dependency>

  </dependencies>


  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.0</version>
        <configuration>
          <release>11</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.1</version>
        <configuration>
          <options>
            <option>--add-opens</option>
            <option>javafx.graphics/javafx.css=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.binding=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.base/com.sun.javafx.event=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
            <option>--add-opens</option>
            <option>java.base/java.lang.reflect=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.controls/com.sun.javafx.scene.control=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.binding=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.graphics/com.sun.javafx.stage=com.jfoenix</option>
            <option>--add-exports</option>
            <option>javafx.base/com.sun.javafx.event=com.jfoenix</option>
          </options>
          <mainClass>com.jkrude.main.Main</mainClass>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>